--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
 	<description>Projeto da disciplina de programação Avançada para web</description>
 
 	<properties>		
-		<sonar.projectKey>fujioka</sonar.projectKey>
-		<sonar.host.url>http://ip172-18-0-10-bu66i4hqckh000b1qcdg-9000.direct.labs.play-with-docker.com</sonar.host.url>
-		<sonar.login>802fabcdf350faf08c391fa2ffe0f55769cad8b8</sonar.login>	
+		<sonar.projectKey>projetosonar</sonar.projectKey>
+		<sonar.host.url>http://localhost:9000</sonar.host.url>
+		<sonar.login>47030fcc75c9114921ac3ce7137c41375bea317c</sonar.login>	
 		<sonar.language>java</sonar.language>	
 		<sonar.sources>src/main/java</sonar.sources>
 		<sonar.java.binaries>target/classes</sonar.java.binaries>
