--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
 	<properties>		
 		<sonar.projectKey>projetosonar</sonar.projectKey>
-		<sonar.host.url>http://localhost:9000</sonar.host.url>
+		<sonar.host.url>127.0.0.1:9000</sonar.host.url>
 		<sonar.login>47030fcc75c9114921ac3ce7137c41375bea317c</sonar.login>	
 		<sonar.language>java</sonar.language>	
 		<sonar.sources>src/main/java</sonar.sources>
