--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
 
 	<properties>		
 		<sonar.projectKey>projetosonar</sonar.projectKey>
-		<sonar.host.url>http://127.0.0.1:9000</sonar.host.url>
-		<sonar.login>47030fcc75c9114921ac3ce7137c41375bea317c</sonar.login>	
+		<sonar.host.url>http: //ip172-18-0-3-bu68d61qckh000b1qoig-9000.direct.labs.play-with-docker.com </sonar.host.url>
+		<sonar.login>3af1bf64b011a10b62ced5507b2bc393ebd2754c</sonar.login>	
 		<sonar.language>java</sonar.language>	
 		<sonar.sources>src/main/java</sonar.sources>
 		<sonar.java.binaries>target/classes</sonar.java.binaries>
