--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
 	<description>Projeto da disciplina de programação Avançada para web</description>
 
 	<properties>		
-		<sonar.projectKey>projetosonar</sonar.projectKey>
+		<sonar.projectKey>sonarqube</sonar.projectKey>
 		<sonar.host.url>http://ip172-18-0-35-bu8aoc1qckh0008rq95g-9000.direct.labs.play-with-docker.com</sonar.host.url>
-		<sonar.login>13eb33e14d43fb286bf4ce0d293c8c6c8c7f70d8</sonar.login>	
+		<sonar.login>3e2fe5372f86c9f6b256db6f0810d540809060e7</sonar.login>	
 		<sonar.language>java</sonar.language>	
 		<sonar.sources>src/main/java</sonar.sources>
 		<sonar.java.binaries>target/classes</sonar.java.binaries>
